// Vitest Snapshot v1

exports[`Steps > Steps extraVue demo works fine 1`] = `
<t-steps
  current="1"
  layout="vertical"
  onchange="function () { [native code] }"
>
  <t-step-item
    content="这里是提示文字"
    title="function () { [native code] }"
  >
    <!---->
  </t-step-item>
  <t-step-item
    content="这里是提示文字"
    title="步骤2"
  >
    <template>
      <t-space
        size="small"
      >
        <t-button
          size="small"
          variant="text"
        >
          上一步
        </t-button>
        <t-button
          size="small"
          variant="base"
        >
          下一步
        </t-button>
      </t-space>
    </template>
  </t-step-item>
  <t-step-item
    content="这里是提示文字"
    title="步骤3"
  >
    <!---->
  </t-step-item>
  <t-step-item
    content="这里是提示文字"
    title="步骤4"
  >
    <!---->
  </t-step-item>
</t-steps>
`;

exports[`Steps > Steps iconVue demo works fine 1`] = `
<t-steps
  current="1"
  readonly=""
>
  <t-step-item
    content="已完成状态"
    title="登录"
  >
    <svg
      class="t-icon t-icon-login"
      fill="none"
      height="1em"
      slot="icon"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M8.48 7.5L6.23 5.25l.7-.7 3.1 3.1c.2.2.2.5 0 .7l-3.1 3.1-.7-.7L8.48 8.5H1v-1h7.48z"
        fill="currentColor"
        fill-opacity="0.9"
      />
      <path
        d="M4 5V3h8v10H4v-2H3v2.5c0 .28.22.5.5.5h9a.5.5 0 00.5-.5v-11a.5.5 0 00-.5-.5h-9a.5.5 0 00-.5.5V5h1z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
  </t-step-item>
  <t-step-item
    content="进行中状态"
    icon="function () { [native code] }"
    title="购物"
  />
  <t-step-item
    content="未开始"
    icon="function () { [native code] }"
    title="支付"
  />
  <t-step-item
    content="未开始"
    icon="function () { [native code] }"
    title="完成"
  />
</t-steps>
`;

exports[`Steps > Steps noSequenceVue demo works fine 1`] = `
<t-steps
  current="1"
  readonly=""
  theme="dot"
>
  <t-step-item
    content="这里是提示文字"
    title="已完成的步骤"
  />
  <t-step-item
    content="这里是提示文字"
    title="进行中的步骤"
  />
  <t-step-item
    content="这里是提示文字"
    title="未进行的步骤"
  />
  <t-step-item
    content="这里是提示文字"
    title="未进行的步骤"
  />
</t-steps>
`;

exports[`Steps > Steps optionsVue demo works fine 1`] = `
<t-steps
  current="1"
  options="[object Object],[object Object],[object Object],[object Object]"
/>
`;

exports[`Steps > Steps sequenceVue demo works fine 1`] = `
<t-space
  direction="vertical"
  size="large"
>
  <t-steps
    defaultcurrent="1"
  >
    <t-step-item
      title="已完成的步骤"
    />
    <t-step-item
      title="进行中的步骤"
    />
    <t-step-item
      title="未进行的步骤"
    />
    <t-step-item
      title="未进行的步骤"
    />
  </t-steps>
  <t-steps
    options="[object Object],[object Object],[object Object],[object Object]"
  />
</t-space>
`;

exports[`Steps > Steps statusVue demo works fine 1`] = `
<t-space
  direction="vertical"
  size="large"
>
  <t-steps
    current="1"
    readonly=""
  >
    <t-step-item
      content="这里是提示文字"
      title="已完成的步骤"
    />
    <t-step-item
      content="这里是提示文字"
      title="进行中的步骤"
    />
    <t-step-item
      content="这里是提示文字"
      title="未进行的步骤"
    />
    <t-step-item
      content="这里是提示文字"
      title="未进行的步骤"
    />
  </t-steps>
  <t-steps
    current="2"
    readonly=""
  >
    <t-step-item
      content="这里是提示文字"
      title="已完成的步骤"
    />
    <t-step-item
      content="这里是提示文字"
      title="已完成的步骤"
    />
    <t-step-item
      content="这里是错误提示文字"
      status="error"
      title="错误的步骤"
    />
    <t-step-item
      content="这里是提示文字"
      title="未进行的步骤"
    />
  </t-steps>
</t-space>
`;

exports[`Steps > Steps verticalNoSequenceVue demo works fine 1`] = `
<t-space
  class="justify-around"
  data-v-7f4a1ba9=""
>
  <t-steps
    current="1"
    data-v-7f4a1ba9=""
    layout="vertical"
    readonly=""
    theme="dot"
  >
    <t-step-item
      content="这里是提示文字"
      data-v-7f4a1ba9=""
      title="已完成的步骤"
    />
    <t-step-item
      content="这里是提示文字"
      data-v-7f4a1ba9=""
      title="进行中的步骤"
    />
    <t-step-item
      content="这里是提示文字"
      data-v-7f4a1ba9=""
      title="未进行的步骤"
    />
    <t-step-item
      content="这里是提示文字"
      data-v-7f4a1ba9=""
      title="未进行的步骤"
    />
  </t-steps>
  <t-steps
    current="1"
    data-v-7f4a1ba9=""
    layout="vertical"
    readonly=""
    sequence="reverse"
    theme="dot"
  >
    <t-step-item
      content="这里是提示文字"
      data-v-7f4a1ba9=""
      title="已完成的步骤"
    />
    <t-step-item
      content="这里是提示文字"
      data-v-7f4a1ba9=""
      title="已完成的步骤"
    />
    <t-step-item
      content="这里是提示文字"
      data-v-7f4a1ba9=""
      title="进行中的步骤"
    />
    <t-step-item
      content="这里是提示文字"
      data-v-7f4a1ba9=""
      title="未进行的步骤"
    />
  </t-steps>
</t-space>
`;

exports[`Steps > Steps verticalSequenceVue demo works fine 1`] = `
<t-space
  class="justify-around"
  data-v-48740715=""
  size="236"
>
  <t-steps
    current="1"
    data-v-48740715=""
    layout="vertical"
    readonly=""
  >
    <t-step-item
      content="这里是提示文字"
      data-v-48740715=""
      title="已完成的步骤"
    />
    <t-step-item
      content="这里是提示文字"
      data-v-48740715=""
      title="进行中的步骤"
    />
    <t-step-item
      content="这里是提示文字"
      data-v-48740715=""
      title="未进行的步骤"
    />
    <t-step-item
      content="这里是提示文字"
      data-v-48740715=""
      title="未进行的步骤"
    />
  </t-steps>
  <t-steps
    current="1"
    data-v-48740715=""
    layout="vertical"
    readonly=""
    sequence="reverse"
  >
    <t-step-item
      content="这里是提示文字"
      data-v-48740715=""
      title="已完成的步骤"
    />
    <t-step-item
      content="这里是提示文字"
      data-v-48740715=""
      title="已完成的步骤"
    />
    <t-step-item
      content="这里是提示文字"
      data-v-48740715=""
      title="进行中的步骤"
    />
    <t-step-item
      content="这里是提示文字"
      data-v-48740715=""
      title="未进行的步骤"
    />
  </t-steps>
</t-space>
`;
